--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ span {
 }
 
 .reserva {
-  background-image: url("pizzafondo2.jpg");
+  background-image: url("Resources/pizzafondo2.jpg");
   height: 30em;
   background-position: center;
   opacity: 10;
